# KlugDossier_AI

./: Cargo.toml  README.md
src/: engine.rs  lib.rs
src/engine/: math.rs  matrix.rs  nl.rs  nn.rs  sample.rs  utils.rs
src/engine/activation/: hyperbolictangent.rs  identity.rs  leakyrectifiedlinearunit.rs  mod.rs  rectifiedlinearunit.rs  sigmoid.rs  softmax.rs  softplus.rs
src/engine/cost/: cross_entropy.rs  mod.rs  squared_error.rs
