[package]
name = "substrate-ai"
version = "2.0.0"
authors = ["maxtnuk <maxtnuk@gmail.com>"]
description = "test module"
license = "MIT"
edition = "2018"
repository = "https://github.com/underwater-squad/substrate.ai.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
frame-support = { default-features = false, version = '2.0.0' }
frame-system = { default-features = false, version = '2.0.0' }
serde = { version="1.0", default-features = false }
postcard= {version="0.5.1", default-features= false,features=["alloc"]}

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dev-dependencies]
sp-core = { default-features = false, version = '2.0.0' }
sp-io = { default-features = false, version = '2.0.0'  }
sp-runtime = { default-features = false, version = '2.0.0' }


[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
]

